# daemon

./: .gitignore  .gitmodules  .typos.toml  AGENTS.md  LICENSING.md  NOTICE  README.md  REUSE.toml  flake.nix  justfile
.cursor/: mcp.json
.github/workflows/: ci.yml  codeql.yml  release.yml
.plans/: publish.md
docs/: hosted-node-image.md  update-rollout.md
nix/: kwin-mcp-atspi-input.py  kwin-mcp-core-fixups.py  kwin-mcp-nixos.patch
packaging/flatpak/: README.md  ai.daemon.app.yml  cargo-sources.json
scripts/: cs-mcp  kwin-mcp  pre-commit.sh  pre-push.sh  release.sh
system-tests/: Cargo.toml
system-tests/src/: lib.rs
system-tests/tests/: approvals_journey.rs  channels.rs  chat.rs  client_frontends.rs  files.rs  fleet.rs  hitl.rs  local_models.rs  matrix_journey.rs  onboarding.rs  profiles.rs  protocol_trace.rs  recovery.rs  wizard_gate.rs
